# Compressor

./: .gitignore  .gitmodules  BWT.h  BinaryIO.h  CMakeLists.txt  Converter.h  Huffman.h  LZW.h  MTF.h  Node.h  README.md  main.cpp
.github/workflows/: cpp.yml
Compressors/: Compressor.h  LZW.h  MTF.h
Compressors/BWT/: BWT.h  SuffixArray.h
Compressors/Huffman/: Huffman.h  Node.h
Compressors/LZW/: LZW.h  Utils.h
Utils/: BinaryIO.h  Converter.h
